--- a/Tribute_page/css/style.scss
+++ b/Tribute_page/css/style.scss
@@ -3,16 +3,12 @@ TO DO:
 Clear up code, jesus
 Try to implement layout with map, make code more sassy
 
-Style the longer description
 Style footer
-Come up with color scheme
-Add transitions where possible
+style navbar, add JS and transform
 Keep an eye out for border shadow and tiny borders
 Use different font families
-Make picture into thumbnail / card?
 
 Mention somewhere that most of this is from wikipedia
-Add links to books
 USE MIXINS WHERE APPROPRIATE
 */
 
@@ -63,11 +59,18 @@ body {
 	border-bottom: 1px solid black;
 }
 
-h1 {
-	color: $main-color2;
-	margin-top: $header-vertical-margin;
-	margin-bottom: $header-vertical-margin;
+.header {
+	h1 {
+		color: $main-color2;
+		margin-top: $header-vertical-margin;
+		margin-bottom: $header-vertical-margin;
+	}
+	span {
+		font-weight: 600;
+	}
 }
+
+
 
 .section-title {
 	margin-top: $header-vertical-margin;
@@ -218,23 +221,32 @@ h1 {
 	flex-wrap: wrap;
 	justify-content: space-around;
 	li {
+		//@include box-shadow(1px, 1px, 20px, 20px, red);
+		box-shadow: 1px, 1px, 5px, 5px, red;
 		position: relative;
+		z-index: 10;
 		width: 128px;
 		height: 208px;
 		margin-bottom: 5px;
 		margin-right: 5px;
 		margin-left: 5px;
 		overflow: hidden;
-		//@include background(inline, #fff, no-repeat, scroll);
 		.book-overlay {
+			@include transition(opacity 0.8s);
 			position: absolute;
 			top: 0; right: 0; bottom: 0; left: 0;
 			opacity: 0;
-			width: 100%;
-			//height: 100%;
+			//width: 100%;
 			background-color: rgba(0,0,0,0.8);
 			color: white;
-			@include transition(opacity 0.8s);
+			a {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				z-index: 100;
+			}
 			.book-title {
 				margin-top: $book-overlay-text-margin * 2;
 				font-size: 10px;
@@ -254,6 +266,9 @@ h1 {
 				//float: right;
 			}
 		}
+		&:hover {
+
+		}
 		&:hover .book-overlay {
 			opacity: 100;
 		}
@@ -268,5 +283,5 @@ h1 {
 
 footer {
 
-	border: 1px solid $background-default;
+	border-top: 1px solid $background-default;
 }
